[package]
name = "quic"
version = "0.0.21"
authors = ["Roger Qiu <roger.qiu@polyhack.io>"]
license-file = "LICENSE"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]
path = "src/native/napi/lib.rs"

[dependencies]
napi = { version = "2", features = ["async", "napi6", "serde-json"] }
serde = { version = "1.0", features = ["derive"] }
napi-derive = { version = "2", default-features = false, features = ["strict", "compat-mode"] }
quiche = { version = "0.17.1", features = ["boringssl-boring-crate", "boringssl-vendored"] }
boring = "2.1.0"
# FIXME: temp for testing
log = { version = "0.4", features = ["std"] }
ring = "0.16"

[build-dependencies]
napi-build = "2"

# FIXME: included for flamegraph, remove later?
[profile.release]
debug = true
